# triangulation-delaunay

./: example-barrel-nodes.bat  example-saddle-nodes.bat  example-sphere-nodes.bat
doc/: Тестовое С++.docx
src/: CMakeLists.txt  README.md  coordinates_file_parser.cpp  coordinates_file_parser.h  file_writer_interface.h  main.cpp  vertex_3d.cpp  vertex_3d.h
src/delaunay/: CMakeLists.txt  constants.h  delaunay_factory.cpp  delaunay_factory.h  delaunay_service.cpp  delaunay_service.h  triangle.cpp  triangle.h  triangulation_cache.cpp  triangulation_cache.h  utils.cpp  utils.h  vertex_2d.h  vertex_relation.h
src/test/: CMakeLists.txt  DelaunayTest.vcxproj  DelaunayTest.vcxproj.filters  delaunay_service_test.cpp  delaunay_service_test.h  main.cpp  test.h  triangle_test.cpp  triangle_test.h  triangulation_cache_test.cpp  triangulation_cache_test.h  utils_test.cpp  utils_test.h
src/triangulation/: CMakeLists.txt  coordinates_file_parser.cpp  coordinates_file_parser.h  default_writer.cpp  default_writer.h  file_writer_interface.h  utils.cpp  utils.h  vertex_3d.cpp  vertex_3d.h
